[package]
name = "spotifypi-control-panel-fl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.2.30", features = ["fltk-bundled"] }
fltk-theme = "0.4.2"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = "0.17.0"
futures = "0.3.21"
futures-util = "0.3.21"
url = "2.2.2"
regex = "1.5.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3